--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
+# Razorpay public key for frontend (safe to expose)
 VITE_RAZORPAY_KEY_ID=rzp_test_xxxxxxxxxxxxx
+
+# Never put your Razorpay key_secret in the frontend.
+# Use it only on your server to create orders and verify signatures.
