--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,15 @@ VITE_RAZORPAY_KEY_ID=rzp_test_xxxxxxxxxxxxx
 
 # Never put your Razorpay key_secret in the frontend.
 # Use it only on your server to create orders and verify signatures.
+
+# Firebase (public) config for frontend auth
+VITE_FIREBASE_API_KEY=your_api_key
+VITE_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your_project_id
+VITE_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=000000000000
+VITE_FIREBASE_APP_ID=1:000000000000:web:xxxxxxxxxxxxxxxx
+
+# Google Analytics 4 (optional)
+# Example: G-XXXXXXXXXX
+VITE_GA_MEASUREMENT_ID=
