--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,19 @@ VITE_FIREBASE_APP_ID=1:000000000000:web:xxxxxxxxxxxxxxxx
 # Google Analytics 4 (optional)
 # Example: G-XXXXXXXXXX
 VITE_GA_MEASUREMENT_ID=
+
+# Server Functions base URL (required for server-side profile updates)
+# Example (production): https://asia-south2-your_project_id.cloudfunctions.net
+# Example (emulator): http://127.0.0.1:5001/your_project_id/asia-south2
+# Optional: Only needed if not using callable
+VITE_FUNCTIONS_BASE_URL=https://asia-south2-megance-8fc33.cloudfunctions.net
+
+# Optional: Region for callable functions
+# e.g. asia-south2 or us-central1
+VITE_FUNCTIONS_REGION=asia-south2
+
+# Function toggles (server)
+# Leave blank/false in dev; set true only when configured
+# EMAIL_ENABLED=true
+# RAZORPAY_ENABLED=false
+# IDENTITY_ENABLED=false
