--- a/.env
+++ b/.env
@@ -15,3 +15,4 @@ VITE_FIREBASE_APP_ID=1:766130089044:web:9e81fe8b1500059a9c91c1
 # NOTE: If Storage is used, the bucket is usually <project-id>.appspot.com
 VITE_FUNCTIONS_BASE_URL=https://asia-south2-megance-8fc33.cloudfunctions.net
 VITE_FUNCTIONS_REGION=asia-south2
+EMAIL_ENABLED=true
