--- a/functions/package.json
+++ b/functions/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "firebase-admin": "^12.5.0",
     "firebase-functions": "^5.1.0",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "pdfkit": "^0.13.0"
   }
 }
