--- a/.env
+++ b/.env
@@ -16,3 +16,5 @@ VITE_FIREBASE_APP_ID=1:766130089044:web:9e81fe8b1500059a9c91c1
 VITE_FUNCTIONS_BASE_URL=https://asia-south2-megance-8fc33.cloudfunctions.net
 VITE_FUNCTIONS_REGION=asia-south2
 EMAIL_ENABLED=true
+
+VITE_SUPABASE_BUCKET=refund-requests
