--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,8 @@ VITE_FUNCTIONS_REGION=asia-south2
 # EMAIL_ENABLED=true
 # RAZORPAY_ENABLED=false
 # IDENTITY_ENABLED=false
+
+# reCAPTCHA behavior for web phone auth
+# If true, the app may show a visible reCAPTCHA challenge on OTP errors.
+# Keep this false to avoid showing any captcha UI; OTP may fail in suspicious environments.
+VITE_ALLOW_VISIBLE_RECAPTCHA=false
