refined: returns/refund page

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,13 @@ VITE_FUNCTIONS_BASE_URL=https://asia-south2-megance-8fc33.cloudfunctions.net
 # e.g. asia-south2 or us-central1
 VITE_FUNCTIONS_REGION=asia-south2
 
+# Supabase (for returns/refund images)
+# Public URL of your Supabase project and anon key.
+# Bucket defaults to `refund-requests` if not set.
+VITE_SUPABASE_URL=
+VITE_SUPABASE_ANON_KEY=
+VITE_SUPABASE_BUCKET=refund-requests
+
 # Function toggles (server)
 # Leave blank/false in dev; set true only when configured
 # EMAIL_ENABLED=true
